--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "tailwind:watch": "tailwindcss -i ./src/input.css -o ./src/output.css --watch"
+    "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/cssinjs": "^1.23.0",
     "@ant-design/icons": "^6.0.0",
     "antd": "^5.26.1",
     "next": "15.3.4",
@@ -21,7 +21,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6",
+    "concurrently": "^8.2.2",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
