--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@ant-design/cssinjs": "^1.23.0",
     "@ant-design/icons": "^6.0.0",
     "antd": "^5.26.1",
+    "axios": "^1.10.0",
     "next": "15.3.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.58.1"
   },
   "devDependencies": {
     "@types/node": "^20",
