--- a/package.json
+++ b/package.json
@@ -12,12 +12,19 @@
     "@ant-design/cssinjs": "^1.23.0",
     "@ant-design/icons": "^6.0.0",
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
+    "@reduxjs/toolkit": "^2.8.2",
+    "@tanstack/react-query": "^5.81.2",
+    "@types/leaflet": "^1.9.19",
     "antd": "^5.26.1",
     "axios": "^1.10.0",
+    "dayjs": "^1.11.13",
+    "leaflet": "^1.9.4",
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-hook-form": "^7.58.1"
+    "react-hook-form": "^7.58.1",
+    "react-redux": "^9.2.0",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@types/node": "^20",
