--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@types/leaflet": "^1.9.19",
     "antd": "^5.26.1",
     "axios": "^1.10.0",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "isomorphic-dompurify": "^2.25.0",
     "leaflet": "^1.9.4",
     "next": "15.3.4",
     "react": "^19.0.0",
