--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
     "@types/leaflet": "^1.9.19",
     "antd": "^5.26.1",
     "axios": "^1.10.0",
+    "canvas": "^3.1.2",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "isomorphic-dompurify": "^2.25.0",
+    "konva": "^9.3.20",
     "leaflet": "^1.9.4",
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.58.1",
+    "react-konva": "^19.0.6",
     "react-redux": "^9.2.0",
     "react-toastify": "^11.0.5"
   },
