--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@microsoft/signalr": "^8.0.7",
     "@reduxjs/toolkit": "^2.8.2",
     "@tanstack/react-query": "^5.81.2",
+    "@types/dompurify": "^3.0.5",
     "@types/leaflet": "^1.9.19",
     "antd": "^5.26.1",
     "axios": "^1.10.0",
     "canvas": "^3.1.2",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "dompurify": "^3.2.6",
     "isomorphic-dompurify": "^2.25.0",
     "konva": "^9.3.20",
     "leaflet": "^1.9.4",
