--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "antd": "^5.26.1",
     "axios": "^1.10.0",
     "canvas": "^3.1.2",
+    "chart.js": "^4.5.0",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "dompurify": "^3.2.6",
@@ -28,9 +29,11 @@
     "leaflet": "^1.9.4",
     "next": "15.3.4",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.58.1",
     "react-konva": "^19.0.6",
+    "react-leaflet": "^5.0.0",
     "react-redux": "^9.2.0",
     "react-toastify": "^11.0.5"
   },
