--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "@ant-design/icons": "^6.0.0",
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "@microsoft/signalr": "^8.0.7",
+    "@openmapvn/openmapvn-gl": "^1.0.1",
+    "@react-google-maps/api": "^2.20.7",
     "@reduxjs/toolkit": "^2.8.2",
     "@tanstack/react-query": "^5.81.2",
     "@types/dompurify": "^3.0.5",
-    "@types/leaflet": "^1.9.19",
+    "@types/lodash": "^4.17.20",
+    "@types/mapbox-gl": "^3.4.1",
+    "@types/uuid": "^10.0.0",
     "antd": "^5.26.1",
     "axios": "^1.10.0",
     "canvas": "^3.1.2",
@@ -26,17 +30,18 @@
     "dompurify": "^3.2.6",
     "isomorphic-dompurify": "^2.25.0",
     "konva": "^9.3.20",
-    "leaflet": "^1.9.4",
+    "lodash": "^4.17.21",
+    "mapbox-gl": "^3.13.0",
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.58.1",
     "react-konva": "^19.0.6",
-    "react-leaflet": "^5.0.0",
     "react-quill": "^2.0.0-beta.2",
     "react-redux": "^9.2.0",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
