--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@reduxjs/toolkit": "^2.8.2",
     "@tanstack/react-query": "^5.81.2",
     "@types/dompurify": "^3.0.5",
+    "@types/leaflet": "^1.9.20",
     "@types/lodash": "^4.17.20",
     "@types/mapbox-gl": "^3.4.1",
     "@types/uuid": "^10.0.0",
@@ -30,6 +31,7 @@
     "dompurify": "^3.2.6",
     "isomorphic-dompurify": "^2.25.0",
     "konva": "^9.3.20",
+    "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
     "mapbox-gl": "^3.13.0",
     "next": "15.3.4",
