--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.58.1",
     "react-konva": "^19.0.6",
+    "react-leaflet": "^5.0.0",
     "react-quill": "^2.0.0-beta.2",
     "react-redux": "^9.2.0",
     "react-toastify": "^11.0.5",
